# dasXbyak

./: CMakeLists.txt
dasxbyak/: xbyak_boost.das
examples/: fib.das  jit.optimizations.txt  jit_x86_64.das  jit_x86_64_alloc_regs.das  jit_x86_64_common.das  jit_x86_64_generate.das  jit_x86_64_regs.das  primes.das  test.das  test_cmp.das  test_div_mod.das  test_for.das  test_if.das  test_inc_dec.das  test_jit.das  test_jit_call.das  wip.das
examples/profiler/: fib.das  primes.das  profile_common.inc
examples/tests/: test_add_sub.das  test_common.inc  test_cond.das  test_copy.das  test_div_mod.das  test_for.das  test_if.das  test_inc_dec.das  test_jit_call.das  test_mul.das
jit/: jit_x86_64.das  jit_x86_64_alloc_regs.das  jit_x86_64_common.das  jit_x86_64_generate.das  jit_x86_64_generate_base.das  jit_x86_64_regs.das  jit_x86_64_test.das
src/: aot_dasXBYAK.h  aot_xbyak.h  dasXBYAK.alias.add.inc  dasXBYAK.enum.add.inc  dasXBYAK.enum.class.inc  dasXBYAK.enum.decl.inc  dasXBYAK.func_1.cpp  dasXBYAK.func_10.cpp  dasXBYAK.func_11.cpp  dasXBYAK.func_12.cpp  dasXBYAK.func_13.cpp  dasXBYAK.func_14.cpp  dasXBYAK.func_15.cpp  dasXBYAK.func_16.cpp  dasXBYAK.func_17.cpp  dasXBYAK.func_18.cpp  dasXBYAK.func_19.cpp  dasXBYAK.func_2.cpp  dasXBYAK.func_20.cpp  dasXBYAK.func_21.cpp  dasXBYAK.func_22.cpp  dasXBYAK.func_23.cpp  dasXBYAK.func_3.cpp  dasXBYAK.func_4.cpp  dasXBYAK.func_5.cpp  dasXBYAK.func_6.cpp  dasXBYAK.func_7.cpp  dasXBYAK.func_8.cpp  dasXBYAK.func_9.cpp  dasXBYAK.main.cpp  dasXBYAK.struct.add.inc  dasXBYAK.struct.class.inc  dasXbyak.cpp  dasXbyak.h  dasZydis.cpp  generate_xbyak.das  module_xbyak.ann.cpp_inc  module_xbyak.ann.inc  module_xbyak.enum.cpp_inc  module_xbyak.enum.inc  (+28 more)
xbyak/xbyak/: xbyak.h  xbyak_stripped.h
